client/vite-project/src/App.module.scss
:root {
  --error: rgb(204, 64, 64);
  --success: rgb(44, 167, 44);
  --warning: rgb(255, 205, 112);
}

* html,
body {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-family: "Roboto", sans-serif;
  scrollbar-color: black;
  scrollbar-arrow-color: black;
  scrollbar-track-color: white;
  scrollbar-width: thin;
}

:global(.active) {
  // outline: .1px solid skyblue;
  outline: .1px solid rgb(51, 51, 51);
  border-radius: .1rem;
}

.app__container {
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 1fr auto;
}

ol,
ul {
  list-style: none;
}

input,
textarea {
  font-size: .75rem;
  padding: .7rem;
  border: 1px solid rgb(23, 23, 23);
  border-radius: .1rem;
  outline: none;
  transition: border .2s;

  &:focus {
    border: 1px solid white;
    background-color: rgb(233, 233, 233);
    transition: border .2s;
  }

  &::placeholder {
    font-size: .6rem;
    color: rgb(158, 158, 158);
  }

  &:user-invalid {
    border: 1px solid white;
    outline: 1px solid var(--error);
  }

  &:user-valid {
    border: 1px solid white;
    outline: 1px solid var(--success);
  }
}

textarea {
  min-height: 250px;
  resize: vertical;
}

label {
  font-size: .6rem;
  font-weight: 400;
  padding-top: .7rem;
  padding-bottom: .3rem;
  color: rgb(0, 0, 0);
  text-align: left;
}

.submit__button {
  all: unset;
  width: fit-content;
  font-size: .7rem;
  padding: .5rem 1.5rem;
  margin-top: .8rem;
  background-color: rgb(1, 1, 1);
  color: rgb(231, 231, 231);
  border-radius: .1rem;
  transition: background-color .3s;
  cursor: pointer;

  &:hover {
    background-color: rgb(245, 245, 245);
    color: black;
  }
}

